# esp-hal

./: CHANGELOG.md
.github/workflows/: ci.yml
esp-hal-common/: Cargo.toml
esp-hal-common/src/: buzzer.rs  ds.rs  lib.rs  system.rs
esp-hal-common/src/ledc/: channel.rs  timer.rs
esp32-hal/: Cargo.toml
esp32-hal/examples/: buzzer.rs
esp32c2-hal/: Cargo.toml
esp32c2-hal/examples/: buzzer.rs
esp32c3-hal/: Cargo.toml
esp32c3-hal/examples/: buzzer.rs
esp32c6-hal/: Cargo.toml
esp32c6-hal/examples/: buzzer.rs
esp32h2-hal/: Cargo.toml
esp32h2-hal/examples/: buzzer.rs
esp32s2-hal/: Cargo.toml
esp32s2-hal/examples/: buzzer.rs
esp32s3-hal/: Cargo.toml
esp32s3-hal/.cargo/: config.toml
esp32s3-hal/examples/: buzzer.rs  ds.rs
extras/esp-hal-buzzer/: Cargo.toml
extras/esp-hal-buzzer/src/: lib.rs  songs.rs
extras/esp-hal-smartled/: Cargo.toml
