[package]
name = "esp-hal-buzzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"
description  = "Buzzer driver for esp-hal"
repository   = "https://github.com/esp-rs/esp-hal"
license      = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["esp32c3"]

[dependencies]
esp-hal-common   = { version = "0.12.0", path = "../../esp-hal-common" }
fugit            = "0.3.7"
embedded-hal     = { version = "0.2.7",  features = ["unproven"] }

[features]
esp32   = ["esp-hal-common/esp32"]
esp32c2 = ["esp-hal-common/esp32c2"]
esp32c3 = ["esp-hal-common/esp32c3"]
esp32c6 = ["esp-hal-common/esp32c6"]
esp32h2 = ["esp-hal-common/esp32h2"]
esp32s2 = ["esp-hal-common/esp32s2"]
esp32s3 = ["esp-hal-common/esp32s3"]

esp32_26mhz = ["esp-hal-common/esp32_26mhz"]
esp32_40mhz = ["esp-hal-common/esp32_40mhz"]
